fix(auth): harden WeCom API client